--- a/src/main/resources/properties/variable.properties
+++ b/src/main/resources/properties/variable.properties
@@ -1,61 +1,61 @@
 ##阿里云服务签名
-accessKeyId=LTAIEwm2LXa64cdB
-accessKeySecret=6VW6F1l7GcZiYvrWWbnNzxdiEwiDyW
+accessKeyId=***********
+accessKeySecret=***********
 #国内模板
 #注册模板code
-registerMSM=SMS_148613235
+registerMSM=***********
 #注册成功提醒
-registerWinMSM=SMS_148593201
+registerWinMSM=***********
 #提醒模板code
-remindMSM=SMS_148613243
+remindMSM=***********
 #快捷登录模板code
-loginMSM=SMS_148593204
+loginMSM=***********
 #句子结构通关提醒code
 flatMSM=SMS_148593210
 #句子成组通过提醒code
 bunchMSM=SMS_148593209
 #动词短语通关提醒code
-verbMSM=SMS_148593208
+verbMSM=***********
 #名次短语意义测试级错误原因提醒
-nounSenseMSM=SMS_148593207
+nounSenseMSM=***********
 #名词短语通关提醒
-nounMSM=SMS_148613236
+nounMSM=***********
 #修改密码
-updatePasswordMSM=SMS_148593203
+updatePasswordMSM=***********
 #修改手机号旧手机发送验证码
-oldPhoneMSM=SMS_149418981
+oldPhoneMSM=***********
 #修改手机号新手机发送验证码
-newPhoneMSM=SMS_149423793
+newPhoneMSM=***********
 
 
 #国际短信模板
 #注册模板code
-wregisterMSM=SMS_157450008
+wregisterMSM=***********
 #注册成功提醒
-wregisterWinMSM=SMS_157450007
+wregisterWinMSM=***********
 #提醒模板code
-wremindMSM=SMS_157445028
+wremindMSM=***********
 #快捷登录模板code
-wloginMSM=SMS_157450005
+wloginMSM=***********
 #句子结构通关提醒code
-wflatMSM=SMS_157450002
+wflatMSM=***********
 #句子成组通过提醒code
-wbunchMSM=SMS_157450003
+wbunchMSM=***********
 #动词短语通关提醒code
-wverbMSM=SMS_157445029
+wverbMSM=***********
 #名次短语意义测试级错误原因提醒
-wnounSenseMSM=SMS_157445030
+wnounSenseMSM=***********
 #名词短语通关提醒
-wnounMSM=SMS_157445031
+wnounMSM=***********
 #修改密码
-wupdatePasswordMSM=SMS_157450006
+wupdatePasswordMSM=***********
 #修改手机号旧手机发送验证码
-woldPhoneMSM=SMS_157450009
+woldPhoneMSM=***********
 #修改手机号新手机发送验证码
-wnewPhoneMSM=SMS_157445032
+wnewPhoneMSM=***********
 
 #管理后台重置密码
-xydPassword=123456
+xydPassword=***********
 #儿童默认月龄范围
 defaultAgeMax=28
 #儿童默认月龄范围
